feature(v3): Write and query data using the Java client library:
- Closes #5048
- Part of #5050
- Fixes csharp example.
- Fixes wrong time placeholder values in query samples.
- Misc. cleanup and fixes.